# python-projects-raspberry-pi

./: .gitmodules  README.md
.github/ISSUE_TEMPLATE/: Errata.yml
ch02/: ch02-pi-button1.py  ch02-pi-button2.py  ch02-pi-led-blink1.py  ch02-pi-led-blink2.py  ch02-pi-led-blink3.py  ch02-pi-led-pulse.py  ch02-pi-led_pulse.py  ch02-pi-reaction-game.py  ch02-pico-button.py  ch02-pico-led-blink.py  ch02-pico-reaction-game.py
ch03/: ch03-bme280-i2c-pi.py  ch03-bme280-i2c.py  ch03-bme280-spi-pi.py  ch03-pi-full.py  ch03-pi-pms5003.py  ch03-pico-full-other-than-air.py  ch03-pico-full.py  ch03-pms5003-pi.py  ch03_pms5003.py  ch3-bme280-saving-to-file.py  ch3-bme280-spi.py  ch3-pi-full.py  ch3-pms5003.py  ch3_pms5003.py  i2c_scan.py
ch04/: boing-embedded.py  clock.py  hello.py  pico_clock.py  pico_hello.py  weather.py
ch04/pico_roids/: roids.py  st7789py.py  tft_buttons.py  tft_config.py
ch05/: NeoPixel_pico.py  encoder_pico.py  neopixel_pico.py  pio_blink.py  uart_pico.py
ch05/encoder/: CMakeLists.txt  encoder_pio.c  encoder_rpi5.py  quadrature_encoder.pio
ch05/uart/: CMakeLists.txt  uart_pio.c  uart_pio.py  uart_rx.pio  uart_rx.pio.h  uart_tx.pio  uart_tx.pio.h
ch05/ws2812/: CMakeLists.txt  neopixel_pio.c  neopixel_rpi5.py
ch06/: pico-adc.py  pico-basic.py  pico-microdot-adc.py  pico_microdot_led.py
ch06/pico/: pattern_web_server.py
ch06/pico w led controller/: pico_w_led_controller.py  with ssl and login.py
ch06/pico w led controller/with_ssl/: pico w https led controller.py
ch06/raspberry_pi/: .gitignore  basic.py  basic_start.md  basic_start.py  basic_start_more.py  basic_start_mp.py  basic_start_rpi.py  pattern_aurora.py  pattern_base.py  pattern_bouncing_balls.py  pattern_candy_cane.py  pattern_christmas_tree.py  pattern_colour_chase.py  pattern_comet.py  pattern_comet_swarm.py  pattern_fireworks.py  pattern_flame.py  pattern_mist.py  pattern_ornament.py  pattern_rainbow_fade.py  pattern_rules  pattern_santa_hat.py  pattern_snowfall.py  pattern_snowman.py  pattern_sparkle.py  pattern_twinkle.py  pattern_waterfall.py  pattern_wave.py
ch06/raspberry_pi/static/: styles.css
ch06/raspberry_pi/templates/: basic_start_more.html  create_pattern.html  edit_pattern.html  login.html  main.html  main.tpl  patterns.html  start.html  start_mp.html
ch07/: adafruit_io_plain_pi.py  ch07-pico-adafruitio-basic.py  ch07-pico-bme280.py  ch07_adafruit_pi_onoff.py  google_sheets_bme280.py
ch08/: build_model.py  ch08-wand-lsm6ds3.py  ch08-wand.py  led_helpers.py  llama.py  stream.py  stream_lsm6ds3.py  stream_mpu6050.py  wand.stl
ch09/: Art-net controller  arcade_controller.py  art-net-controller_pi.py  art_net_controller_pi.py  artnet_pico.py  artnet_pico_v2.py
